--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "discord.js": "^14.15.2",
         "dotenv": "^16.0.2",
         "html-to-image": "^1.11.11",
+        "https": "^1.0.0",
         "indomitable": "^2.0.2",
         "petitio": "^1.4.0",
         "reflect-metadata": "^0.1.13",
