--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "html-to-image": "^1.11.11",
         "https": "^1.0.0",
         "indomitable": "^2.0.2",
+        "jsonc-parser": "^3.3.1",
         "petitio": "^1.4.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.4",
